PHP Password Manager (ppma) Change Log
======================================

Version 0.3.4
-------------
- New: Added widget to sidebar that shows the most viewed entries
- Chg: Upgraded Foundation to version 3.2

Version 0.3.3
-------------
- New: Added widget to sidebar that shows the recent entries
- Chg: Removed unused files
- Chg: Cleaned up code
- Bug: #3 can't install, won't create database tables

Version 0.3.2
-------------
- New: Added typeahead to search field in the navigation
- Chg: Removed some usages of non existing JS and CSS files

Version 0.3.1
-------------
- Bug: Update-modal on entry/index didn't work
- Bug: Fresh installations didn't work, because assets/ & protected/runtime/ were missing

Version 0.3.0
-------------
- New: Added link to the saved URL of an entry (index.php?r=entries/index)
- New: Added favicon
- Chg: Improved design (using foundation)
- Chg: Removed registration functionality