@@ -3,8 +3,9 @@ PHP Password Manager (ppma) Change Log
 
 Version 0.3.4
 -------------
-- New: Added widget to sidebar that shows the most viewed entries
+- New #1: Added widget to sidebar that shows the most viewed entries
 - Chg: Upgraded Foundation to version 3.2
+- Enh: Optimized the upgrade routine
 
 Version 0.3.3
 -------------
